--- a/index.html
+++ b/index.html
@@ -2241,12 +2241,12 @@
           ]
         }
 }; // End of your data
-    </script>
+   </script>
 <!-- 3. React App logic only - Babel will now run much faster -->
 <script type="text/babel">
 const { useState, useEffect, Fragment, useRef } = React;
 
-const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#C5A059" strokeWidth="2"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
+const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#C5A059" strokeWidth="2"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l-.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l-.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
 const IconBack = () => <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#C5A059" strokeWidth="2.5"><path d="m15 18-6-6 6-6"/></svg>;
 
 const THEMES = {
@@ -2258,7 +2258,7 @@ const THEMES = {
 const App = () => {
   const [activePageId, setActivePageId] = useState(null);
   const [showSettings, setShowSettings] = useState(false);
-  const [theme, setTheme] = useState(THEMES.teal);
+  const [theme, setTheme] = useState(THEMES.teal); // Keeping original THEMES.teal
   const [fontScale, setFontScale] = useState(0);
   const scrollRef = useRef(null);
 
@@ -2279,8 +2279,10 @@ const App = () => {
     const aSize = 34 + (fontScale * 2);
     const eSize = 18 + (fontScale * 1);
 
-    // This is the aggressive padding for shorter lines
-    const textHorizontalPadding = '4rem'; // This will add 64px padding to left and right
+    // Adjusted padding based on the appearance of the new images
+    // These values are visually estimated to match the line breaks from your example
+    const arabicTextPadding = '1rem'; // Equivalent to px-4 in Tailwind, but applied directly
+    const englishTextPadding = '1rem'; // Equivalent to px-4 in Tailwind, but applied directly
 
     switch (block.type) {
       case 'section-title': case 'title-green':
@@ -2290,19 +2292,19 @@ const App = () => {
         return <p key={idx} dir="rtl" className="font-arabic mb-6 text-[#2D8A4E] text-xl px-2" style={{ textAlign: 'justify', textJustify: 'inter-word' }}>{clean(block.text)}</p>;
 
       case 'arabic': case 'arabic-indopak':
-        // MODIFIED: Applying aggressive padding directly via style for shorter lines
-        return <p key={idx} dir="rtl" className="font-arabic mb-6 font-bold" style={{ color: theme.id === 'cream' ? '#000' : theme.text, fontSize: `${aSize}px`, textAlign: 'justify', textJustify: 'inter-word', lineHeight:'2.05', paddingLeft: textHorizontalPadding, paddingRight: textHorizontalPadding }}>{clean(block.text)}</p>;
+        // MODIFIED: Applying specific padding for line breaking, keeping classnames simple
+        return <p key={idx} dir="rtl" className="font-arabic mb-6 font-bold" style={{ color: theme.id === 'cream' ? '#000' : theme.text, fontSize: `${aSize}px`, textAlign: 'justify', textJustify: 'inter-word', lineHeight:'2.05', paddingLeft: arabicTextPadding, paddingRight: arabicTextPadding }}>{clean(block.text)}</p>;
 
       case 'arabic-green':
-        // MODIFIED: Applying aggressive padding directly via style for shorter lines
-        return <p key={idx} dir="rtl" className="font-arabic mb-6 font-bold text-[#2D8A4E]" style={{ fontSize: `${aSize}px`, textAlign:'justify', textJustify:'inter-word', lineHeight:'2.05', paddingLeft: textHorizontalPadding, paddingRight: textHorizontalPadding }}>{clean(block.text)}</p>;
+        // MODIFIED: Applying specific padding for line breaking, keeping classnames simple
+        return <p key={idx} dir="rtl" className="font-arabic mb-6 font-bold text-[#2D8A4E]" style={{ fontSize: `${aSize}px`, textAlign:'justify', textJustify:'inter-word', lineHeight:'2.05', paddingLeft: arabicTextPadding, paddingRight: arabicTextPadding }}>{clean(block.text)}</p>;
 
       case 'text':
-        // MODIFIED: Applying aggressive padding directly via style for shorter lines
-        return <p key={idx} className="font-sans mb-4 opacity-90 font-medium" style={{ color: theme.id === 'cream' ? '#333' : theme.text, fontSize: `${eSize}px`, textAlign:'justify', lineHeight: '1.7', paddingLeft: textHorizontalPadding, paddingRight: textHorizontalPadding }}>{block.text}</p>;
+        // MODIFIED: Applying specific padding for line breaking, keeping classnames simple
+        return <p key={idx} className="font-sans mb-4 opacity-90 font-medium" style={{ color: theme.id === 'cream' ? '#333' : theme.text, fontSize: `${eSize}px`, textAlign:'justify', lineHeight: '1.7', paddingLeft: englishTextPadding, paddingRight: englishTextPadding }}>{block.text}</p>;
 
       case 'reference-small':
-        // Kept original px-4 as it wasn't specified for this type
+        // Reverting to a general px-4 for this, as it wasn't the focus of line breaking change
         return <p key={idx} className="text-center text-[11px] mb-6 opacity-50 italic px-4" style={{ color: theme.id === 'cream' ? '#666' : theme.text }}>{block.text}</p>;
 
       case 'flower-icon': return null;
