--- a/index.html
+++ b/index.html
@@ -2242,13 +2242,12 @@
         }
 
      }; // End of your data
-    </script>
+     </script>
+<!-- 3. React App logic only - Babel will now run much faster -->
+<script type="text/babel">
+const { useState, useEffect, Fragment, useRef } = React;
 
-    <!-- 3. React App logic only - Babel will now run much faster -->
-    <script type="text/babel">
-      const { useState, useEffect, Fragment, useRef } = React;
-
-      const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#C5A059" strokeWidth="2"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
+const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#C5A059" strokeWidth="2"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
       const IconBack = () => <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#C5A059" strokeWidth="2.5"><path d="m15 18-6-6 6-6"/></svg>;
 
       const THEMES = {
@@ -2282,15 +2281,17 @@
           const eSize = 18 + (fontScale * 1);
           switch (block.type) {
             case 'section-title': case 'title-green':
-              return <h3 id={blockId} key={idx} className="nav-target text-center font-heading font-bold text-[13px] tracking-widest mb-6 pb-2 border-b border-[#C5A059]/40 uppercase text-[#C5A059] pt-2">{block.text}</h3>;
+              return <h3 id={blockId} key={idx} className="nav-target text-center font-heading font-bold text-[13px] tracking-widest mb-10 pb-2 border-b border-[#C5A059]/40 uppercase text-[#C5A059] pt-2">{block.text}</h3>;
             case 'subtitle-green':
-              return <p key={idx} dir="rtl" className="text-center font-arabic mb-6 text-[#2D8A4E] text-xl px-4">{clean(block.text)}</p>;
+              return <p key={idx} dir="rtl" className="text-center font-arabic mb-10 text-[#2D8A4E] text-xl px-4">{clean(block.text)}</p>;
             case 'arabic': case 'arabic-indopak':
-              return <p key={idx} dir="rtl" className="font-arabic mb-6 text-center font-bold px-2" style={{ color: theme.id === 'cream' ? '#000' : theme.text, fontSize: `${aSize}px` }}>{clean(block.text)}</p>; 
+              // Changed to mb-10 and added leading-[1.8] to make the Arabic lines look cleaner like the picture
+              return <p key={idx} dir="rtl" className="font-arabic mb-10 text-center font-bold px-2 leading-[1.8]" style={{ color: theme.id === 'cream' ? '#000' : theme.text, fontSize: `${aSize}px` }}>{clean(block.text)}</p>; 
             case 'arabic-green':
-              return <p key={idx} dir="rtl" className="font-arabic mb-6 text-center font-bold px-2 text-[#2D8A4E]" style={{ fontSize: `${aSize}px` }}>{clean(block.text)}</p>; 
+              return <p key={idx} dir="rtl" className="font-arabic mb-10 text-center font-bold px-2 text-[#2D8A4E] leading-[1.8]" style={{ fontSize: `${aSize}px` }}>{clean(block.text)}</p>; 
             case 'text':
-              return <p key={idx} className="text-center font-sans mb-4 opacity-90 leading-relaxed font-medium px-4" style={{ color: theme.id === 'cream' ? '#333' : theme.text, fontSize: `${eSize}px` }}>{block.text}</p>; 
+              // Changed to mb-10 to give space before the line
+              return <p key={idx} className="text-center font-sans mb-10 opacity-90 leading-relaxed font-medium px-4" style={{ color: theme.id === 'cream' ? '#333' : theme.text, fontSize: `${eSize}px` }}>{block.text}</p>; 
             case 'reference-small':
               return <p key={idx} className="text-center text-[11px] mb-6 opacity-50 italic px-4" style={{color: theme.id === 'cream' ? '#666' : theme.text}}>{block.text}</p>;
             case 'allah-name': 
@@ -2304,8 +2305,9 @@
                 </div>
               );
             case 'flower-icon': return null;
-            case 'hr': return <div key={idx} className="h-px w-1/4 mx-auto bg-[#C5A059]/30 my-8" />;
-            case 'count-badge': return <div key={idx} className="flex justify-center mb-6"><span className="px-4 py-1.5 rounded-full text-[10px] font-bold border border-[#C5A059] text-[#C5A059] uppercase bg-black/5">{block.text}</span></div>;
+            // FIX: Changed w-1/4 to w-full and h-px to h-[0.5px] to make the line long and thin like the screenshot
+            case 'hr': return <div key={idx} className="h-[0.5px] w-full mx-auto bg-[#C5A059]/30 my-12" />;
+            case 'count-badge': return <div key={idx} className="flex justify-center mb-10"><span className="px-4 py-1.5 rounded-full text-[10px] font-bold border border-[#C5A059] text-[#C5A059] uppercase bg-black/5">{block.text}</span></div>;
             default: return null;
           }
         };
