--- a/index.html
+++ b/index.html
@@ -1894,7 +1894,7 @@
     title: 'Morning & Evening Adhkar',
     cards: [
         {
-           variant: 'default',
+            variant: 'default',
             content: [
                 { type: 'section-title', text: '1. Ayatul Kursi' },
                 { type: 'text', text: 'Read 1 time. Protection from jinns.' },
@@ -1905,29 +1905,22 @@
                 { type: 'section-title', text: '2. The Three Quls' },
                 { type: 'text', text: 'Recite Surah Al-Ikhlas, Al-Falaq, and An-Nas 3 times each. Suffices for everything.' },
 
-                // --- IKHLAS (Fixed to 5 lines of Arabic text) ---
+                // --- IKHLAS (Kept as original from your first code with 'number' field) ---
                 { type: 'section-title', text: 'IKHLAS', style: 'text-sm font-bold mt-4' },
-                { type: 'arabic', text: 'بِسْمِ ٱللّٰهِ ٱلرَّحْمٰنِ ٱلرَّحِيمِ', number: '' }, // Line 1
-                { type: 'arabic', text: 'قُلْ هُوَ ٱللَّهُ أَحَدٌ (1)', number: '' },        // Line 2
-                { type: 'arabic', text: 'ٱللَّهُ ٱلصَّمَدُ (2)', number: '' },            // Line 3
-                { type: 'arabic', text: 'لَمْ يَلِدْ وَلَمْ يُولَدْ (3)', number: '' },        // Line 4
-                { type: 'arabic', text: 'وَلَمْ يَكُن لَّهُۥ كُفُوًا أَحَدٌۢ (4)', number: '' }, // Line 5
+                { type: 'arabic-indopak', text: 'بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ' },
+                { type: 'arabic-indopak', text: 'قُلْ هُوَ اللَّهُ أَحَدٌ ۝ اللَّهُ الصَّمَدُ ۝ لَمْ يَلِدْ وَلَمْ يُولَدْ ۝ وَلَمْ يَكُن لَّهُ كُفُوًا أَحَدٌ ۝' },
                 { type: 'hr' },
 
-                // --- AL FALAQ (Fixed to 5 lines of Arabic text) ---
-                { type: 'section-title', text: 'AL FALAQ', style: 'text-sm font-bold mt-4' },
-                { type: 'arabic', text: 'بِسْمِ ٱللّٰهِ ٱلرَّحْمٰنِ ٱلرَّحِيمِ', number: '' }, // Line 1
-                { type: 'arabic', text: 'قُلْ اَعُوْذُ بِرَبِّ الْفَلَقِۙ (1) مِن شَرِّ مَا خَلَقَۙ (2)', number: '' }, // Line 2
-                { type: 'arabic', text: 'وَمِن شَرِّ غَاسِقٍ إِذَا وَقَبَۙ (3) وَمِن شَرِّ النَّفّٰثٰتِ فِي الْعُقَدِۙ (4)', number: '' }, // Line 3
-                { type: 'arabic', text: 'وَمِن شَرِّ حَاسِدٍ إِذَا حَسَدَ۠ (5)', number: '' }, // Line 4 (Total 4 lines for Surah Al-Falaq after Basmalah, fitting within 5-line limit)
+             // --- AL FALAQ (AYAH 1 + 2 SAME LINE) ---
+{ type: 'section-title', text: 'AL FALAQ', style: 'text-sm font-bold mt-4' },
+
+  { type: 'arabic-indopak', text: 'بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ' },
+                { type: 'arabic-indopak', text: 'قُلْ أَعُوذُ بِرَبِّ الْفَلَقِ ۝ مِن شَرِّ مَا خَلَقَ ۝ وَمِن شَرِّ غَاسِقٍ إِذَا وَقَبَ ۝ وَمِن شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ ۝ وَمِن شَرِّ حَاسِدٍ إِذَا حَسَدَ ۝' },
                 { type: 'hr' },
 
-                // --- AN NAAS (Fixed to 5 lines of Arabic text) ---
-                { type: 'section-title', text: 'AL NAAS', style: 'text-sm font-bold mt-4' },
-                { type: 'arabic', text: 'بِسْمِ ٱاللّٰهِ ٱلرَّحْمٰنِ ٱلرَّحِيمِ', number: '' }, // Line 1
-                { type: 'arabic', text: 'قُلْ أَعُوذُ بِرَبِّ ٱلنَّاسِ (1) مَلِكِ ٱلنَّاسِ (2)', number: '' }, // Line 2
-                { type: 'arabic', text: 'إِلَـٰهِ ٱلنَّاسِ (3) مِن شَرِّ ٱلْوَسْوَاسِ ٱلْخَنَّاسِ (4)', number: '' }, // Line 3
-                { type: 'arabic', text: 'ٱلَّذِى يُوَسْوِسُ فِى صُدُورِ ٱلنَّاسِ (5) مِنَ ٱلْجِنَّةِ وَٱلنَّاسِ (6)', number: '' }, // Line 4 (Total 4 lines for Surah An-Naas after Basmalah, fitting within 5-line limit)
+                // --- AN-NAAS (Kept as original from your first code with 'number' field) ---
+                { type: 'arabic-indopak', text: 'بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ' },
+                { type: 'arabic-indopak', text: 'قُلْ هُوَ اللَّهُ أَحَدٌ ۝ اللَّهُ الصَّمَدُ ۝ لَمْ يَلِدْ وَلَمْ يُولَدْ ۝ وَلَمْ يَكُن لَّهُ كُفُوًا أَحَدٌ ۝' },
                 { type: 'hr' },
                 // --- End of "2. The Three Quls" section ---
 
@@ -1975,6 +1968,7 @@
                 { type: 'section-title', text: '10. Protection from Harm' },
                 { type: 'text', text: 'Read 3 times. Nothing will harm you.' },
                 { type: 'arabic', text: 'بِسْمِ اللَّهِ الَّذِي لَا يَضُرُّ مَعَ اسْمِهِ شَيْءٌ فِي الْأَرْضِ وَلَا فِي السَّمَاءِ وَهُوَ السَّمِيعُ الْعَلِيمُ' },
+                { type: 'hr' },
                 { type: 'hr' },
                       { type: 'section-title', text: '11. Satisfaction with Islam' },
                       { type: 'text', text: 'Read 3 times. Paradise becomes mandatory.' },
